[WK2]Critical warning while building WebKit2 GTK+ https://bugs.webkit.org/show_bug.cgi?id=70591

Patch by Vamshikrishna Yellenki <vamshi@motorola.com> on 2011-10-25
Reviewed by Martin Robinson.

* WebProcess/WebPage/WebPage.cpp: Included DataObjectGtk.h to avoid warnings for GTK

git-svn-id: svn://svn.chromium.org/blink/trunk@98325 bbb929c8-8fbe-4397-9dbb-9b2b20218538