third_party/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -129,6 +129,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QMimeData>
 #endif
 
+#if PLATFORM(GTK)
+#include "DataObjectGtk.h"
+#endif
+
 #ifndef NDEBUG
 #include <wtf/RefCountedLeakCounter.h>
 #endif
